# rusty

./: Cargo.toml  README.md
src/: main.rs
src/commands/: mod.rs
src/commands/moderation/: ban.rs  embeds.rs  kick.rs  mod.rs  permissions.rs  purge.rs  timeout.rs  unban.rs  untimeout.rs  warn.rs  warnings.rs
src/commands/utility/: embeds.rs  help.rs  mod.rs  pagetest.rs  ping.rs  universe.rs  usage.rs
src/embed/: embed.rs
src/embed/pagination/: view.rs
src/services/: mod.rs  moderation.rs  warnings.rs
src/util/: mod.rs
src/util/pagination/: view.rs
